feat - update API to login

--- a/src/backend/JwtAuth.HS256/JwtAuth.HS256.csproj
+++ b/src/backend/JwtAuth.HS256/JwtAuth.HS256.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JwtAuth.Service\JwtAuth.Service.csproj" />
+    <ProjectReference Include="..\JwtAuth.Infrastructure\JwtAuth.Infrastructure.csproj" />
+    <ProjectReference Include="..\JwtAuth.Domain\JwtAuth.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
